@@ -145,6 +145,8 @@ void gtk_dialog_set_response_sensitive (GtkDialog *dialog,
                                         gboolean   setting);
 void gtk_dialog_set_default_response   (GtkDialog *dialog,
                                         gint       response_id);
+gint gtk_dialog_get_response_for_widget (GtkDialog *dialog,
+					 GtkWidget *widget);
 
 void     gtk_dialog_set_has_separator (GtkDialog *dialog,
                                        gboolean   setting);
@@ -169,8 +171,6 @@ gint gtk_dialog_run                (GtkDialog *dialog);
 /* For private use only */
 void _gtk_dialog_set_ignore_separator (GtkDialog *dialog,
 				       gboolean   ignore_separator);
-gint _gtk_dialog_get_response_for_widget (GtkDialog *dialog,
-					  GtkWidget *widget);
 
 G_END_DECLS
 
